page3.html　一応完成

--- a/homepage1/page3.html
+++ b/homepage1/page3.html
@@ -8,7 +8,13 @@
         <h1>大乱闘スマッシュブラザーズSPECIAL【Nintendo Switch】</h1>
         <ul>
             <li>ジャンル：対戦アクションゲーム</li>
-            <li>発売日：2018年12月7日</li>
+            <li>発売日：2018年12月7日<br><strong>同期のゲーム</strong>
+            <ul>
+            <li><a href='https://www.monsterhunter.com/world-iceborne/ja/'>モンスターハンター：ワールド：アイスボーン</a></li>
+            <li><a href='https://www.streetfighter.com/5/ja-jp/'>STREET FIGHTER Ⅴ</a></li>
+            <li><a href='https://www.nintendo.com/jp/switch/adfja/index.html'>スーパーマリオパーティ</a></li>
+            </ul>
+            </li>
             <li>売上本数：<strong>🗾757万本　🌐3422万本　</strong>(2024年3月末時点)</li>
         </ul>
         <p>1999年第1作目である『<a href="https://www.nintendo.co.jp/n01/n64/software/nus_p_nalj/index.html"><strong>ニンテンドウオールスター！大乱闘スマッシュブラザーズ</strong></a>』から約19年後、過去最高の売り上げを誇るシリーズが誕生します。それが、<strong>大乱闘スマッシュブラザーズSPECIAL</strong>です。
