ゼルダの本文の追加

--- a/zelda_page/zelda.html
+++ b/zelda_page/zelda.html
@@ -18,13 +18,23 @@
         </p>
 
         <h2>おすすめタイトル</h2>
-        <p>私は<h2>ゼルダの伝説　ムジュラの仮面</h2>をお勧めします。
+        <p><h3>ゼルダの伝説　ムジュラの仮面</h3>をお勧めします。
             <br>
             このタイトルは2000年4月27日にその二年前に発売された時のオカリナの続編とされ、Nintedo 64で発売されました。
             <br>
-            ストーリーはハイラルを巨悪から救った少年リンクは愛馬とともに放浪の旅をしていた。森の中で仮面をかぶったスタルキッドという小鬼に襲われ愛馬を奪われてしまう。
+            ストーリーは【ハイラルを巨悪から救った少年リンクは愛馬とともに放浪の旅をしていた。森の中で仮面をかぶったスタルキッドという小鬼に襲われ愛馬を奪われてしまう。
             <br>
-            奪われた愛馬を取り戻すためにリンクが迷い込んだ先はハイラルとは異なる異世界タルミナだった。そこは世界が滅ぶまで三日
+            奪われた愛馬を取り戻すためにリンクが迷い込んだ先はハイラルとは異なる異世界タルミナだった。そこは世界が滅ぶまで３日しか残されていない！
+            <br>
+            時間を遡ることのできる「時のオカリナ」を使い、３日間をループしながら４日目を迎えるためにリンクは道中で出会った妖精「チャット」と共に冒険に出たのだ...】
+        </p>
+        <p>
+            おすすめなポイントとしては、ゲームバランスです。ダンジョンでは謎解きがメインにありますが、それがとても丁度いい難易度で苦手な人でもできるレベルになっています。
+            <br>
+            また、色々なところで手に入るお面を使って様々な能力を駆使してギミックを解いていくのは達成感があります。
+            <br>
+            次に、サブイベントです。メインストーリーには直接は関与しないですが、プレイヤーの判断でイベントの展開が変化します。一回のループでは全てのイベントクリアするのは不可能なため、
+            どちらかを見捨てないとならないのはやるせない気持ちになります。しかし、ゲームでこのようなことを体験できるのはほかではあまりないと思います。考えされられるゲームとしては良作だと思います。
         </p>
     </body>
 </html>
