画像の追加および文章の加筆・修正

--- a/zelda_page/zelda.html
+++ b/zelda_page/zelda.html
@@ -7,6 +7,8 @@
 
     <body>
         <h1>ゼルダの伝説</h1>
+        <img src="https://smashwiki.info/images/9/96/%E3%82%BC%E3%83%AB%E3%83%80%E3%81%AE%E4%BC%9D%E8%AA%AC_%E3%83%AD%E3%82%B4.png" width="50%" height="50%">
+        <img src="https://pbs.twimg.com/profile_images/1394820237288038402/ERNEbEMa_400x400.jpg" width="35%" height="35%">
         <h2>概要</h2>
         <p>ゼルダの伝説シリーズは1986年の「ゼルダの伝説」の発売以来、多くの人に愛されるアクションアドベンチャーゲームです。
             <br>
@@ -18,9 +20,11 @@
         </p>
 
         <h2>おすすめタイトル</h2>
-        <p><h3>ゼルダの伝説　ムジュラの仮面</h3>をお勧めします。
+        <p><h3>ゼルダの伝説　ムジュラの仮面</h3>
+            <img src="https://img-eshop.cdn.nintendo.net/i/54f650bb9ff9477ad32cc9c02773607f6dd2c0d85b67a40453de4b0dd7f872f4.jpg?w=640&h=360&pr=2" width="35%" height="35%">
+            <img src="https://pics.prcm.jp/link1113/38676684/jpeg/38676684_480x270.jpeg" width="35%" height="35%">
             <br>
-            このタイトルは2000年4月27日にその二年前に発売された時のオカリナの続編とされ、Nintedo 64で発売されました。
+            このタイトルは2000年4月27日にその二年前に発売された時のオカリナの続編とされ、Nintedo 64で発売されました。現在ではSwitchのonlineまたは3dsのリメイク版で遊べます。
             <br>
             ストーリーは【ハイラルを巨悪から救った少年リンクは愛馬とともに放浪の旅をしていた。森の中で仮面をかぶったスタルキッドという小鬼に襲われ愛馬を奪われてしまう。
             <br>
@@ -29,12 +33,19 @@
             時間を遡ることのできる「時のオカリナ」を使い、３日間をループしながら４日目を迎えるためにリンクは道中で出会った妖精「チャット」と共に冒険に出たのだ...】
         </p>
         <p>
-            おすすめなポイントとしては、ゲームバランスです。ダンジョンでは謎解きがメインにありますが、それがとても丁度いい難易度で苦手な人でもできるレベルになっています。
+            おすすめなポイントは２つあります。
             <br>
-            また、色々なところで手に入るお面を使って様々な能力を駆使してギミックを解いていくのは達成感があります。
+            <ul>
+                <li>１つ目はゲームバランスです。ダンジョンでは謎解きがメインにありますが、それがとても丁度いい難易度で苦手な人でもできるレベルになっています。<br>
+                    また、色々なところで手に入るお面を使って様々な能力を駆使してギミックを解いていくのは達成感があります。
+                </li>
+                <li>
+                    次に、サブイベントです。メインストーリーには直接は関与しないですが、プレイヤーの判断でイベントの展開が変化します。一回のループでは全てのイベントクリアするのは不可能なため、
+                    どちらかを見捨てないとならないのはやるせない気持ちになります。しかし、ゲームでこのようなことを体験できるのはほかではあまりないと思います。考えされられるゲームとしては良作だと思います。
+                </li>
+            </ul>
             <br>
-            次に、サブイベントです。メインストーリーには直接は関与しないですが、プレイヤーの判断でイベントの展開が変化します。一回のループでは全てのイベントクリアするのは不可能なため、
-            どちらかを見捨てないとならないのはやるせない気持ちになります。しかし、ゲームでこのようなことを体験できるのはほかではあまりないと思います。考えされられるゲームとしては良作だと思います。
+            amazonの<a href="https://www.amazon.co.jp/%E4%BB%BB%E5%A4%A9%E5%A0%82-%E3%82%BC%E3%83%AB%E3%83%80%E3%81%AE%E4%BC%9D%E8%AA%AC-%E3%83%A0%E3%82%B8%E3%83%A5%E3%83%A9%E3%81%AE%E4%BB%AE%E9%9D%A2-3D-3DS/dp/B00S66U7ZI?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&smid=AQIYFX19ZJWZN&th=1">リンク</a>(3DS版)
         </p>
     </body>
 </html>
