cssとhtmlとリンクさせた

--- a/zelda_page/zelda.html
+++ b/zelda_page/zelda.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>ゼルダの伝説の紹介</title>
+        <link rel="stylesheet" href="zelda.css">
     </head>
 
     <body>
